# py-html-to-json

./: .gitignore  README.md  pyproject.toml  setup.py
src/html_to_json/: __init__.py  parser.py
tests/: test_parser.py  test_sandbox.py  utils.py
tests/data/: sample.html  sample.json  sample_with_breakline.html  sample_with_breakline.json
