[project]
name = "html_to_json"
version = "0.0.0.3"
description = "Turn html into json - and keep the tags order"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["html", "json", "development"]
authors = [{name = "Arnaldo Ono", email = "git@onoarnaldo.com" }]
maintainers = [{name = "Arnaldo Ono", email = "git@onoarnaldo.com" }]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

dependencies = []

[project.optional-dependencies]
test = ["pytest", "coverage"]

[project.urls]
"Homepage" = "https://github.com/OnoArnaldo/py-html-to-json"
"Source" = "https://github.com/OnoArnaldo/py-html-to-json"

#[project.scripts]
#sample = "sample:main"

[tool.pylint.MAIN]
init-hook = "import sys; sys.path.append('./venv/lib/python3.11/site-packages/'); sys.path.append('./src')"

[tool.pylint.'MESSAGES CONTROL']
disable = ["raw-checker-failed",
    "bad-inline-option",
    "locally-disabled",
    "file-ignored",
    "suppressed-message",
    "useless-suppression",
    "deprecated-pragma",
    "use-symbolic-message-instead",
    "use-implicit-booleaness-not-comparison-to-string",
    "use-implicit-booleaness-not-comparison-to-zero",
    "missing-module-docstring",
    "missing-function-docstring",
    "missing-class-docstring"]

[tool.pylint.FORMAT]
max-line-length=121

[tool.black]
line-length = 121
target-version = ['py310', 'py311']
skip-string-normalization = true

[tool.mypy]
implicit_optional = true